Fix Add/Update/Delete Road Review view-topo Fix Message func Add Auth Guard

--- a/front/truespotFront/src/app/components/area/create-area/create-area.component.html
+++ b/front/truespotFront/src/app/components/area/create-area/create-area.component.html
@@ -70,6 +70,7 @@
                              autocapitalize="on"
                              spellcheck="on"
                              required
+                             min="0"
                              minlength="10">
                     </div>
                   </div>
