--- a/front/truespotFront/src/app/components/topo/view-list-topo/view-list-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-list-topo/view-list-topo.component.html
@@ -1,30 +1,30 @@
 <div class="container">
   <div class="card">
-    <div class="card-header"><h3>Liste des topos :</h3></div>
+    <div class="card-header badge-primary"><h3>Liste des topos :</h3></div>
     <div class="card-body">
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <table class="table" >
+            <table class="table table-responsive" >
+              <table class="table table-hover table-condensed table-striped">
+                <thead class="table-display">
               <tr>
                 <th>Nom du topo</th>
                 <th>Department</th>
                 <th>Date de parution</th>
-                <th>Nombre de secteurs</th>
-                <th>Nombre de voies</th>
-                <th>Difficultées des voies</th>
                 <th>Disponible</th>
                 <th></th>
               </tr>
+                </thead>
+                <tbody>
               <tr *ngFor="let topo of topos">
                 <td>{{topo.name}}</td>
                 <td>{{topo.department.id}} -  {{topo.department.name}}</td>
                 <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
                 <td>{{topo.avaible}}</td>
-                <td><a class="btn btn-light" (click)="sendIdTopo(topo.id)">Voir</a></td>
+                <td><a button type="button" class="btn btn-primary" (click)="sendIdTopo(topo.id)">Voir</a></td>
+                </tbody>
+            </table>
             </table>
           </div>
         </div>
