--- a/front/truespotFront/src/app/components/topo/view-mylist-topo/view-mylist-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-mylist-topo/view-mylist-topo.component.html
@@ -1,33 +1,40 @@
 <div class="container">
   <br>
   <div class="card">
-    <div class="card-header"><h3>Mes topos disponibles:</h3></div>
+    <div class="card-header badge-primary"><h3>Mes topos disponibles:</h3></div>
     <div class="card-body">
       <div class="card-deck">
         <div class="card">
           <div class="card-body">
-            <table class="table">
-              <tr>
-                <th>Nom du topo</th>
-                <th>Department</th>
-                <th>Date de parution</th>
-                <th>Nombre de secteurs</th>
-                <th>Nombre de voies</th>
-                <th>Difficultées des voies</th>
-                <th>Disponible</th>
-                <th>Actions</th>
-                <th></th>
-              </tr>
-              <tr *ngFor="let topo of topos">
-                <td>{{topo.name}}</td>
-                <td>{{topo.department.id}} -  {{topo.department.name}}</td>
-                <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.avaible}}</td>
-                <td><button type="button" class="btn btn-primary" (click)="sendIdTopo(topo.id)">Voir</button></td>
-                <td><button type="button" class="btn btn-info" (click)="shareTopo(topo.id)">Partager le topo</button></td>
+            <table class="table table-responsive">
+              <table class="table table-hover table-condensed table-striped">
+                <thead class="table-display">
+                <tr>
+                  <th>Nom du topo</th>
+                  <th>Department</th>
+                  <th>Date de parution</th>
+                  <th>Nombre de secteurs</th>
+                  <th>Nombre de voies</th>
+                  <th>Difficultées des voies</th>
+                  <th>Disponible</th>
+                  <th>Actions</th>
+                  <th></th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr *ngFor="let topo of topos">
+                  <td>{{topo.name}}</td>
+                  <td>{{topo.department.id}} -  {{topo.department.name}}</td>
+                  <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
+                  <td>{{topo.name}}</td>
+                  <td>{{topo.name}}</td>
+                  <td>{{topo.name}}</td>
+                  <td>{{topo.avaible}}</td>
+                  <td><button type="button" class="btn btn-primary" (click)="sendIdTopo(topo.id)">Voir</button></td>
+                  <td><button type="button" class="btn btn-info" (click)="shareTopo(topo.id)">Partager le topo</button></td>
+                </tr>
+                </tbody>
+              </table>
             </table>
           </div>
         </div>
@@ -35,66 +42,73 @@
     </div>
   </div>
 
-<br>
-<br>
+  <br>
+  <br>
   <div class="card">
-    <div class="card-header"><h3>En attente de validation:</h3></div>
+    <div class="card-header badge-primary"><h3>En attente de validation:</h3></div>
     <div class="card-body">
       <div class="card-deck">
         <div class="card">
-          <div class="card-body" *ngIf="topos">
-            <table class="table" *ngIf=" topos.avaible == 'ATTENTE DE VALIDATION'">
-              <tr>
-                <th>Nom du topo</th>
-                <th>Department</th>
-                <th>Date de parution</th>
-                <th>Nombre de secteurs</th>
-                <th>Nombre de voies</th>
-                <th>Difficultées des voies</th>
-                <th>Disponible</th>
-                <th></th>
-              </tr>
-              <tr *ngFor="let topo of topos">
-                <td>{{topo.name}}</td>
-                <td>{{topo.department.id}} -  {{topo.department.name}}</td>
-                <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.avaible}}</td>
-                <td><button type="button" class="btn btn-info" (click)="null">Annuler le partage</button></td>
+          <div class="card-body" *ngIf="toposShare">
+            <table class="table table-responsive">
+              <table class="table table-hover table-condensed table-striped">
+                <thead class="table-display">
+                <tr>
+                  <th>Nom du topo</th>
+                  <th>Department</th>
+                  <th>Date de parution</th>
+                  <th>Disponible</th>
+                  <th></th>
+                </tr>
+                </thead>
+                <tbody  *ngFor="let topo of toposShare">
+                <tr  *ngIf=" topo.avaible == 'ATTENTE DE VALIDATION'">
+                  <td>{{topo.name}}</td>
+                  <td>{{topo.department.id}} -  {{topo.department.name}}</td>
+                  <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
+                  <td>{{topo.avaible}}</td>
+                  <td><button type="button" class="btn btn-info" (click)="updateTopo(topo.id)">Annuler le partage</button></td>
+                </tr>
+                </tbody>
+              </table>
             </table>
           </div>
         </div>
       </div>
     </div>
   </div>
+
+  <br>
+  <br>
+
+
   <div class="card">
-    <div class="card-header"><h3> TOPO EMPRUNTES :</h3></div>
+    <div class="card-header badge-primary"><h3>Mes topos empruntés:</h3></div>
     <div class="card-body">
       <div class="card-deck">
         <div class="card">
-          <div class="card-body" *ngIf="topos">
-            <table class="table" *ngIf="topos.avaible == 'INDISPONIBLE'">
-              <tr>
-                <th>Nom du topo</th>
-                <th>Department</th>
-                <th>Date de parution</th>
-                <th>Nombre de secteurs</th>
-                <th>Nombre de voies</th>
-                <th>Difficultées des voies</th>
-                <th>Disponible</th>
-                <th></th>
-              </tr>
-              <tr *ngFor="let topo of topos">
-                <td>{{topo.name}}</td>
-                <td>{{topo.department.id}} -  {{topo.department.name}}</td>
-                <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.name}}</td>
-                <td>{{topo.avaible}}</td>
-                <td><button type="button" class="btn btn-info" (click)="null">Annuler le partage</button></td>
+          <div class="card-body" *ngIf="toposShare">
+            <table class="table table-responsive">
+              <table class="table table-hover table-condensed table-striped">
+                <thead class="table-display">
+                <tr>
+                  <th>Nom du topo</th>
+                  <th>Department</th>
+                  <th>Date de parution</th>
+                  <th>Disponible</th>
+                  <th></th>
+                </tr>
+                </thead>
+                <tbody  *ngFor="let topo of toposShare">
+                <tr  *ngIf=" topo.avaible == 'INDISPONIBLE'">
+                  <td>{{topo.name}}</td>
+                  <td>{{topo.department.id}} -  {{topo.department.name}}</td>
+                  <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
+                  <td>{{topo.avaible}}</td>
+                  <td><button type="button" class="btn btn-info" (click)="updateTopo(topo.id)">Annuler le partage</button></td>
+                </tr>
+                </tbody>
+              </table>
             </table>
           </div>
         </div>
