--- a/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
+++ b/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
@@ -4,7 +4,7 @@
       <div class="well-block">
         <div class="well-title">
 
-          <div class="card">
+          <div class="card" *ngIf="user">
             <div class="card-header badge-primary">
               <h3>Mon compte :</h3>
             </div>
@@ -65,8 +65,23 @@
                 </div>
               </div>
             </div>
-
+            <div class="btn-group">
+              <div class="col-md-3"></div>
+              <div class="col-md-3">
+            <td>
+              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#addArea"
+                      (click)="null">Modifier le profil</button>
+            </td>
+            </div>
+              <div class="col-md-3">
+            <td>
+              <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#deleteArea"
+                      (click)="null">Supprimer mon compte</button>
+            </td>
+                <br>
+            </div>
           </div>
+        </div>
           <br>
 
         </div>
