Add boolean is amical, topic officiel work

--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -14,7 +14,7 @@
 
         <!-- Dropdown Admin -->
         <li class="Admin">
-          <a class="nav-link dropdown-toggle" id="admin" data-toggle="dropdown" *ngIf="authorities =='ROLE_ADMIN'">
+          <a class="nav-link dropdown-toggle" id="admin" data-toggle="dropdown">
             Gestion Admin
           </a>
           <div class="dropdown-menu">
@@ -41,7 +41,6 @@
           <div class="dropdown-menu">
             <a class="dropdown-item" routerLink="/topo/add-topo">Créer un topo</a>
             <a class="dropdown-item" routerLink="/list-topo">Liste de topo</a>
-            <a class="dropdown-item">Rechercher de topo</a>
           </div>
         </li>
       </ul>
