--- a/front/truespotFront/src/app/components/home/home.component.html
+++ b/front/truespotFront/src/app/components/home/home.component.html
@@ -108,3 +108,13 @@
     </div>
   </div>
 </div>
+
+
+
+  <h5 class="text-primary">Your Information</h5>
+  <p>
+    <strong>Username:</strong> {{info.username}}<br/>
+    <strong>Roles:</strong> {{info.authorities}}<br />
+    <strong>Token:</strong> {{info.token}}.
+  </p>
+  <button class="btn btn-secondary" (click)="logout()">Logout</button>
