--- a/front/truespotFront/src/app/components/user/view-list-users/view-list-users.component.html
+++ b/front/truespotFront/src/app/components/user/view-list-users/view-list-users.component.html
@@ -31,7 +31,7 @@
                 <td>{{user.email}}</td>
                 <td>{{user.phoneNumber}}</td>
                 <td>{{user.roles}}</td>
-               <td><button type="button" class="btn btn-secondary" *ngIf="user" (click)="updateRole(users)">Modifier les droits</button></td>
+               <td><button type="button" class="btn btn-secondary" *ngIf="user" datatype="user" (click)="updateRole(user)">Modifier les droits</button></td>
               </tr>
 
               </tbody>
