--- a/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
+++ b/front/truespotFront/src/app/components/user/view-myprofil/view-myprofil.component.html
@@ -96,7 +96,7 @@
         <app-update-user [user]="user "></app-update-user>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="null">Fermer</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="refreshUser()">Fermer</button>
       </div>
     </div>
   </div>
