--- a/front/truespotFront/src/app/components/home/home.component.html
+++ b/front/truespotFront/src/app/components/home/home.component.html
@@ -1,108 +1,89 @@
 
-<button type="button"
-        data-toggle="modal" data-target="#SearchDept"
-        class="btn btn-primary btn-lg btn-block">Rechercher un topo par son département</button>
-
 <div class="container">
   <div class="card">
-    <div class="card-header badge-primary"><h3>Liste des topos :</h3></div>
-    <div class="card-body">
-      <div class="card-deck">
-        <div class="card">
-          <div class="card-body">
-            <table class="table table-responsive" >
-              <table class="table table-hover table-condensed table-striped">
-                <thead class="table-display">
-                <tr>
-                  <th>Nom du topo</th>
-                  <th>Department</th>
-                  <th>Date de parution</th>
-                  <th>Disponible</th>
-                  <th></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr *ngFor="let topo of topos">
-                  <td>{{topo.name}}</td>
-                  <td>{{topo.department.id}} -  {{topo.department.name}}</td>
-                  <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
-                  <td>{{topo.avaible}}</td>
-                  <td><a button type="button" class="btn btn-primary" (click)="sendIdTopo(topo.id)">Voir</a></td>
-                </tbody>
-              </table>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
+    <div class="card-deck">
+      <div class="card">
+        <div class="card-body">
+          <div class="row">
 
+            <form [formGroup]="forms">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<!--Modal Search Dept -->
-<div class="modal fade" id="SearchDept" tabindex="-1" role="dialog" aria-labelledby="SearchDept" aria-hidden="true">
-  <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
-    <div class="modal-content">
-      <div class="modal-header btn-primary">
-        <h5 class="modal-title" id="SearchDeptTitle">Modifier le topo :</h5>
-        <button type="button btn-danger" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-
-        <div class="panel panel-primary">
-          <div class="panel-body">
-            <form #f="ngForm" [formGroup]="formSearchDept">
-
-              <div class="col-md-4">
-                <div class="form-group"
-                     [class.has-success]="formSearchDept.get('idDepartment').valid"
-                     [class.has-error]="formSearchDept.get('idDepartment').invalid && formSearchDept.get('idDepartment').touched">
-                  <label class="control-label">Departement:</label>
-                  <input class="form-control input-md"
-                         type="number"
-                         name="idDepartment"
-                         placeholder="Numéro du département"
-                         formControlName="idDepartment"
-                         autocapitalize="on"
-                         spellcheck="on"
-                         required
-                         min="1"
-                         minlength="95">
+              <div class="row">
+                <div class="col-md-4">
+                  <div class="form-group">
+                    <label class="control-label">Departement:</label>
+                      <select (change)="searchCriteria()"
+                        class="browser-default custom-select" formControlName="departs"> 
+                        <option *ngFor="let departs of departments" [value]="departs.id">{{departs.name}}</option> 
+                      </select> 
+                  </div>
                 </div>
-              </div>
-
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
-                <button type="button" class="btn btn-primary"  [disabled]="formSearchDept.invalid"  data-dismiss="modal" (click)="this.getTopoByDept()">Rechercher</button>
+                <div class="col-md-4">
+                  <label class="control-label">Type de la voie:</label>
+                  <div class="form-group">
+                    <select
+                      class="browser-default custom-select"
+                      formControlName="type"
+                      (change)="searchCriteria()">
+                      <option value="Bloc">Bloc</option>
+                      <option value="Voie">Voie</option>
+                      <option value="Grande voie">Grande voie</option>
+                      <option value="Escalade libre">Escalade libre</option>
+                      <option value="Relais">Relais</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label class="control-label">Type de la voie:</label>
+                  <div class="form-group">
+                    <select
+                      class="browser-default custom-select"
+                      formControlName="avaible"
+                      (change)="searchCriteria()">
+                      <option value="WGOOD">Disponible</option>
+                      <option value="INDISPONIBLE">Indisponible</option>
+                      <option value="ATTENTE DE VALIDATION">Attente de validation</option>
+                    </select>
+                  </div>
+                </div>
               </div>
             </form>
           </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 
+<br>
+
+<div class="container">
+  <div class="card">
+    <div class="card-deck">
+      <div class="card">
+        <div class="card-body">
+          <table class="table table-responsive" >
+            <table class="table table-hover table-condensed table-striped">
+              <thead class="table-display">
+              <tr>
+                <th>Nom du topo</th>
+                <th>Department</th>
+                <th>Date de parution</th>
+                <th>Disponible</th>
+                <th></th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let topo of topos">
+                <td>{{topo.name}}</td>
+                <td>{{topo.department.id}} -  {{topo.department.name}}</td>
+                <td>{{topo.releaseDate | date:"dd/MM/yyyy"}}</td>
+                <td *ngIf="topo.avaible=='WGOOD'">DISPONIBLE</td>
+                <td *ngIf="topo.avaible!='WGOOD'">{{topo.avaible}}</td>
+                <td><a button type="button" class="btn btn-primary" (click)="sendIdTopo(topo.id)">Voir</a></td>
+              </tbody>
+            </table>
+          </table>
         </div>
       </div>
     </div>
@@ -111,6 +92,35 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<br>
+<br>
+<br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<footer>
   <h5 class="text-primary">Your Information</h5>
   <p>
     <strong>Username:</strong> {{info.username}}<br/>
@@ -118,3 +128,4 @@
     <strong>Token:</strong> {{info.token}}.
   </p>
   <button class="btn btn-secondary" (click)="logout()">Logout</button>
+</footer>
