--- a/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
@@ -199,7 +199,7 @@
     </div>
     <div *ngIf="topo">
       <button type="button" class="btn btn-info"
-              *ngIf="pseudo != topo.user.pseudo && topo.avaible == 'WGOOD'"
+              *ngIf="pseudo != topo.user.pseudo && topo.avaible == 'EMPRUNTABLE'"
               (click)="shareTopo()">Emprunter le topo</button>
     </div>
   </div>
