--- a/front/truespotFront/src/app/app.component.html
+++ b/front/truespotFront/src/app/app.component.html
@@ -13,7 +13,7 @@
         </li>
 
         <!-- Dropdown Admin -->
-        <li class="Admin">
+        <li class="Admin" *ngIf="authorities == 'ROLE_ADMIN'">
           <a class="nav-link dropdown-toggle" id="admin" data-toggle="dropdown">
             Gestion Admin
           </a>
