--- a/front/truespotFront/src/app/components/user/update-user/update-user.component.html
+++ b/front/truespotFront/src/app/components/user/update-user/update-user.component.html
@@ -119,9 +119,7 @@
                   </div>
 
                   <div class="col-md-6">
-                    <div class="form-group"
-                         [class.has-success]="forms.get('password').valid"
-                         [class.has-error]="forms.get('password').invalid && forms.get('password').touched">
+                    <div class="form-group">
                       <label class="control-label">Mot de passe:</label>
                       <input class="form-control input-md"
                              type="password"
