--- a/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
+++ b/front/truespotFront/src/app/components/topo/view-topo/view-topo.component.html
@@ -17,11 +17,11 @@
         <div class="card">
           <div class="card-body" *ngIf="topo">
             <div class="row">
-              <div class="col-md-6">
+              <div class="col-md-6" style="margin-left: 15px">
                 <h4 class="card-title">Départment :</h4>
                 <p class="card-text">{{topo.department.id}} - {{topo.department.name}} </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-3">
                 <h4 class="card-title">Date de parution :</h4>
                 <p class="card-text">{{topo.releaseDate | date:"dd/MM/yyyy"}}</p>
               </div>
@@ -214,45 +214,39 @@
       <button type="button"
               data-toggle="modal" data-target="#createMessage"
               class="btn btn-primary btn-lg btn-block">Ajouter un message</button>
+      <br>
+      <div class="container-fluid">
+        <div class="row justify-content-md-center">
+          <div class="card-group col-md-3" *ngFor="let message of messages">
 
-      <div class="container">
-        <section class="row">
-
-          <div class="card-body">
-            <div class="card-deck">
-              <section class="row">
-
-                <div class="card"  *ngFor="let message of messages">
-                  <div class="card-body col-md-12">
-                    <h5 class="card-title">{{message.user.pseudo}}</h5>
-                    <p class="card-text">{{message.message}}</p>
-                    <p class="card-text"><small class="text-muted">{{message.date}}</small></p>
-                  </div>
-
-                  <div class="card-footer">
-                    <div class="row">
-                      <div classe="col-md-3">
-                        <div class="btn-group " role="group">
-                          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#updateTopo"
-                                  *ngIf="authorities =='ROLE_ADMIN' || pseudo == topo.user.pseudo"
-                                  (click)="updateMessage(message.id)">Modifier</button>
-
-                        </div>
-                        <button type="button"  class="btn btn-danger "aria-label="Left Align" *ngIf="authorities =='ROLE_ADMIN' || pseudo == topo.user.pseudo"
-                                (click)="deleteMessage(message.id) ">Supprimer</button>
-                      </div>
+            <div class="card">
+              <h5 class="card-header text-center">{{message.user.pseudo}}</h5>
+              <div class="card-body">
+                <h5 class="card-title text-center">{{message.message}}</h5>
+                <p class="card-text text-center"><small class="text-muted">{{message.date}}</small></p>
+                <div class="card-footer">
+                  <div class="row justify-content-md-center">
+                    <div class="btn-group " style="" role="group">
+                      <button type="button" class="btn btn-info" data-toggle="modal" data-target="#updateMessage"
+                              *ngIf="authorities =='ROLE_ADMIN' || pseudo == topo.user.pseudo"
+                              (click)="updateMessage(message.id)">Modifier</button>
+                      <button type="button"  class="btn btn-danger "aria-label="Left Align" *ngIf="authorities =='ROLE_ADMIN' || pseudo == topo.user.pseudo"
+                              (click)="deleteMessage(message.id) ">Supprimer</button>
                     </div>
                   </div>
                 </div>
-              </section>
+              </div>
             </div>
-
           </div>
-        </section>
+        </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
+
 
 
 
@@ -545,7 +539,7 @@
 
 
 <!-- Modal Road -->
-<div class="modal fade" id="addRoad" tabindex="-1" role="dialog" aria-labelledby="addRoad" aria-hidden="true">
+<div  class="modal fade" id="addRoad" tabindex="-1" role="dialog" aria-labelledby="addRoad" aria-hidden="true">
   <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header btn-primary">
@@ -717,5 +711,46 @@
 </div>
 
 
+<!-- Modal  UpdateUserMessage -->
+<div *ngIf="idMessage" class="modal fade" id="updateMessage" tabindex="-1" role="dialog" aria-labelledby="updateMessage" aria-hidden="true">
+  <div class="modal-dialog modal-xl modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header btn-primary">
+        <h5 class="modal-title" id="updateMessageTitle">Modifier un message :</h5>
+        <button type="button btn-danger" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
 
+        <div class="container">
+          <div class="panel-body">
+            <form #f="ngForm" [formGroup]="formMessage">
+              <div class="row">
+                <div class="col-md-12">
+                  <div class="form-group"
+                    [class.has-success]="formMessage.get('message').valid"
+                    [class.has-error]="formMessage.get('message').invalid && formMessage.get('message').touched">
+                    <label class="control-label">Message:</label>
+                    <textarea class="form-control"
+                              type="text"
+                              name="message"
+                              placeholder="Insérez votre message..."
+                              formControlName="message"
+                              required minlength="2">
+                      </textarea>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+        <button type="button" class="btn btn-primary"  [disabled]="formMessage.invalid"  data-dismiss="modal" (click)="updateMessageModel()">Modifier</button>
+      </div>
+    </div>
+  </div>
+</div>
 
