--- a/front/truespotFront/src/app/components/road/update-road/update-road.component.html
+++ b/front/truespotFront/src/app/components/road/update-road/update-road.component.html
@@ -30,7 +30,6 @@
                         <option value="Voie">Voie</option>
                         <option value="Grande voie">Grande voie</option>
                         <option value="Escalade libre">Escalade libre</option>
-                        <option value="Relais">Relais</option>
                       </select>
                     </div>
                   </div>
@@ -64,7 +63,7 @@
                     <div class="form-group">
                       <label class="control-label">Lettre:</label>
                       <select class="browser-default custom-select" formControlName="letter">
-                        <option value="null"></option>
+                        <option value=" "></option>
                         <option value="A">A</option>
                         <option value="B">B</option>
                         <option value="C">C</option>
@@ -76,7 +75,7 @@
                     <div class="form-group">
                       <label class="control-label">Symbole:</label>
                       <select class="browser-default custom-select" formControlName="symbol">
-                        <option value="null"></option>
+                        <option value=" "></option>
                         <option value="+">+</option>
                         <option value="-">-</option>
                       </select>
