Fix display search bar in front

--- a/front/truespotFront/src/app/components/home/home.component.html
+++ b/front/truespotFront/src/app/components/home/home.component.html
@@ -42,7 +42,7 @@
                     formControlName="avaible"
                     (change)="searchCriteria()">
                     <option value="EMPRUNTABLE">Empruntable</option>
-                    <option value="EN ATTENTE DE VALIDATION">En attente de validation pour un prêt</option>
+                    <option value="ATTENTE DE VALIDATION">En attente de validation pour un prêt</option>
                     <option value="INDISPONIBLE">Indisponible</option>
                   </select>
                 </div>
